# vise

./: .gitignore  Acknowledgements.md  CHANGELOG  CMakeLists.txt  Contributing.md  INSTALL-Linux.md  INSTALL-MacOS.md  INSTALL-Windows.md  INSTALL.md  LICENSE  README.md  README_15cbt.txt  Roadmap.md  UserGuide.md  allstart.sh  fetch_website_from_develop_branch.sh  vise_demo.sh  vise_train.sh  web_run.sh
docker/: Dockerfile  README.md
src/: CMakeLists.txt  vise.cc  vise_server.cc  vise_server_config.h.in
src/api/: CMakeLists.txt  ImageMetadata.cc  ImageMetadata.h  abs_api.cpp  abs_api.h  spatial_api.cpp  spatial_api.h
src/compression/: CMakeLists.txt  product_quant.cpp  product_quant.h
src/evaluation/: nn_evaluator.cpp
src/http_server/: CMakeLists.txt  connection.cc  connection.h  http_request.cc  http_request_handler.cc  http_response.cc  http_server.cc  http_server.h  test_http_server.cc
src/imreg_sift/: CMakeLists.txt  imreg_sift.cc  readme.md  test_imreg_sift.cc
src/matching/registration/: register_images.cpp
src/nn/: coarse_residual.h  nn_compressed.cpp
src/obsolete/api/: api.cpp
src/obsolete/dataset/: CMakeLists.txt  dataset.cpp  document_map.h
src/obsolete/evaluation/: CMakeLists.txt  evaluator.h
src/obsolete/indexing/: CMakeLists.txt  export_clusters.py  fidx_aug.cpp  fidx_in_ram.cpp  fidx_wrapper_jp_db5.cpp  fidx_wrapper_jp_db5.h  iidx_in_ram.cpp  iidx_in_ram.h  iidx_with_data_builder.cpp  iidx_with_data_builder.h  iidx_wrapper_jp_gen.h
src/obsolete/jp_engine_3/: CMakeLists.txt
src/obsolete/jp_engine_3/indexing/: CMakeLists.txt  iidx_generic.hpp  jp_db5.cpp  jp_pickle_nonthreadsafe.hpp
src/obsolete/reallyold/: fit_affine3.cpp  homography.cpp  model_fitter.h  multi_query.cpp  ransac_relja_retrieval.cpp  soft_assigner_llc.h
src/obsolete/reallyold/for_cython_old/: wrapper_ransac.cpp  wrapper_ransac.pyx  wrapper_ransac_engine3.h
src/obsolete/represent/: represent.cpp
src/obsolete/retrieval/: exclude_docs.h  image_graph.cpp  multi_query_mqbm.cpp  spatial_verif.cpp  spatial_verif.h  tests  tfidf.cpp  tfidf.h  tfidf_aug.cpp  tfidf_aug.h  weighter.cpp  weighter.h
src/obsolete/tests/: coarseann_test.cpp  compute_index_aug.cpp  tfidf_query_test.cpp
src/obsolete/util/: CMakeLists.txt  platt_sigmoidfit.cpp  platt_sigmoidfit.h  svm_util.h
src/obsolete/v2/indexing/: CMakeLists.txt  iidx_v2_as_v1.cpp  iidx_v2_as_v1.h
src/preprocessing/: feat_standard.cpp
src/retrieval/: CMakeLists.txt  nn_raw_single_retriever.h  nn_single_retriever.cpp  nn_single_retriever.h  retriever.h
src/search_engine/relja_retrival/: CMakeLists.txt  api_run.sh
src/search_engine/relja_retrival/api/: CMakeLists.txt  abs_api.cpp  abs_api.h
src/search_engine/relja_retrival/compression/: CMakeLists.txt
src/search_engine/relja_retrival/evaluation/: CMakeLists.txt  nn_evaluator.h
src/search_engine/relja_retrival/nn/: CMakeLists.txt  coarse_residual.h  nn_compressed.h  nn_searcher.h
src/search_engine/relja_retrival/preprocessing/: CMakeLists.txt
src/search_engine/relja_retrival/retrieval/: CMakeLists.txt  nn_raw_single_retriever.cpp
src/search_engine/relja_retrival/src/: CMakeLists_original.txt
src/search_engine/relja_retrival/util/: image_util.cpp  macros.h  timing.h
src/search_engine/relja_retrival/v2/: CMakeLists.txt
src/server/: CMakeLists.txt  SearchEngine.cc  SearchEngine.h  ViseMessageQueue.cc  ViseMessageQueue.h  ViseServer.cc  ViseServer.h
src/server/html_templates/: 404.html  Assign.html  Cluster.html  Descriptor.html  Hamm.html  Index.html  Initialize.html  Preprocess.html  Preprocessing.html  Query.html  Setting.html  Settings.html  config.html  settings.html  training.html  vise.css  vise.js  vise_help.html  vise_main.html
src/tests/: CMakeLists.txt
src/ui/cmd/: useAPI_BBC_956.sh
src/ui/visor/: get_scriptroot.py  rr_visor_backend.py
src/ui/web/: .gitignore  api.py  auth.py  contribution.py  details.py  do_search.py  drop.py  dynamic_image.py  file_attributes.py  file_attributes_15cbt.py  file_index.py  home.py  istc.py  page0.py  register_images.py  search_page.py  send_comments.cmake.py  send_comments.py  template.py  template_15cbt.py  template_search_result.py  text_search.py  upload.py  web_api.py  webserver.cmake.py  webserver2.py  webserver_bk.py
src/ui/web/config/: config.cfg  config_original.cfg
src/ui/web/static/: style.130705.css  vise.css  vise.js  vise2.css
src/ui/web/tmp/: 0beb2317-9c70-4c36-b6bd-d21d790a01ef  114c546a-d409-4f5e-aae8-91e3c633cf45  2243169d-2d4c-4383-be69-7c444c1681b3  2243169d-2d4c-4383-be69-7c444c1681b3.compdata  293ca492-3996-4a4f-a27d-ae5b0be4919c  293ca492-3996-4a4f-a27d-ae5b0be4919c.compdata  3033ad67-f487-4f7a-a01c-4699bbbb0db7  3033ad67-f487-4f7a-a01c-4699bbbb0db7.compdata  456e3312-5f42-4411-8349-fcbc93644964  4874dfd3-bf7b-4615-b333-e71234ca71f5  6cef6a52-6343-44da-8e40-6bb75dab53b8  6cef6a52-6343-44da-8e40-6bb75dab53b8.compdata  87c9b2b3-3ef0-4f14-a1e0-f7593ad57c62  ab78fd84-8f75-460a-953a-02dce63076b9  ab78fd84-8f75-460a-953a-02dce63076b9.compdata  b5dc6b82-b30f-4991-9f78-e630a5a69718  c4b00cda-e830-4ccd-9d2b-02756ae9eda3  c4b00cda-e830-4ccd-9d2b-02756ae9eda3.compdata  c8bab414-72f0-4932-bde4-778e29bc0884  c8bab414-72f0-4932-bde4-778e29bc0884.compdata  d3139a69-4c0a-403d-a847-15796a73460c  d3139a69-4c0a-403d-a847-15796a73460c.compdata  d82b781d-e7a7-4ea2-a6a2-3321efc7f147  d82b781d-e7a7-4ea2-a6a2-3321efc7f147.compdata  dd3f8bc7-dab1-4f94-8e55-b6c79813fef5  dd3f8bc7-dab1-4f94-8e55-b6c79813fef5.compdata  (+2 more)
src/util/: CMakeLists.txt  image_util.cpp  macros.h  timing.h
src/util/tests/: CMakeLists.txt
src/v2/api/: CMakeLists.txt  api_v2.cpp  api_v2.h  rr_backend.cpp
src/v2/dataset/: CMakeLists.txt  dataset_abs.h
src/v2/embedding/: CMakeLists.txt
src/v2/indexing/: CMakeLists.txt  build_index.cpp  build_index.h  compute_clusters.py
src/v2/retrieval/: CMakeLists.txt  retriever_v2.cpp  spatial_verif_v2.h
src/vise/: CMakeLists.txt  relja_retrival.cc  search_engine.cc  search_engine_manager.cc  test_search_engine_manager.cc  test_vise_request_handler.sh  util.cc  vise_request_handler.cc
(+260 files in other folders)
